Fix spacing notic
Relates to MT-168

--- a/src/scss/components/_notice.scss
+++ b/src/scss/components/_notice.scss
@@ -21,7 +21,8 @@
   }
   .text {
     @include xp-html-area;
-    :first-child {
+    :first-child,
+    :first-child + h2 {
       margin-top: 0;
     }
   }
